--- a/resume-client/sass/header.scss
+++ b/resume-client/sass/header.scss
@@ -31,3 +31,8 @@ header {
         width: 80px;
     }
 }
+@media screen and (max-width: 480px) {
+    header {
+        padding: 42px 15px 6px 15px;
+    }
+}
